data/derived/comb/progs/unify/prog7942.ml.out
Characters 32-41:
  let f a x = a + (x ** 2.) in
                  ^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
